--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1">
-    <link rel="icon" href="./images/icon.jpg">
+    <link rel="icon" href="./images/icon.png">
     <link rel="manifest" href="./manifest.json">
     <title>Space</title>
   </head>
