--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1">
-    <link rel="icon" href="./images/icon.png">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, width=device-width">
+    <link rel="icon" href="./images/icons/icon-512x512.png">
     <link rel="manifest" href="./manifest.json">
     <title>Space</title>
   </head>
