--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       margin: 0;
     }
     body {
+      background-color: #000;
       width: 100%;
       height: 100vh;
       display: flex;
